--- a/packages/base/style/shared/tabs.css
+++ b/packages/base/style/shared/tabs.css
@@ -2,12 +2,13 @@
   display: inline-flex;
   height: 2.5rem;
   align-items: center;
-  /* justify-content: space-evenly; */
+  justify-content: space-evenly;
   border-radius: 0.375rem;
   background-color: var(--jp-layout-color2);
   padding: 0.25rem;
   color: var(--jp-ui-font-color0);
   gap: 1rem;
+  width: 100%;
 }
 
 .TabsTrigger {
@@ -17,7 +18,7 @@
   white-space: nowrap;
   border-radius: 0.25rem;
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: var(--jp-ui-font-size2);
   font-weight: 500;
   outline: none;
   transition: all 0.3s ease;
