--- a/packages/base/style/shared/toggle.css
+++ b/packages/base/style/shared/toggle.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 0.375rem;
-  font-size: 0.875rem;
+  font-size: var(--jp-ui-font-size1);
   font-weight: 500;
   padding: 0.5rem 1rem;
   transition:
@@ -80,6 +80,6 @@
 .ToggleGroupContext {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   gap: 0.25rem;
 }
