--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -11,6 +11,8 @@
 @import url('./statusBar.css');
 @import url('./temporalSlider.css');
 @import url('ol/ol.css');
+@import url('./shared/button.css');
+@import url('./shared/toggle.css');
 
 .jGIS-Toolbar-GroupName {
   font-size: var(--jp-ui-font-size0);
