Add tabs; Add CSS

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -13,6 +13,7 @@
 @import url('ol/ol.css');
 @import url('./shared/button.css');
 @import url('./shared/toggle.css');
+@import url('./shared/tabs.css');
 
 .jGIS-Toolbar-GroupName {
   font-size: var(--jp-ui-font-size0);
