--- a/packages/base/style/shared/toggle.css
+++ b/packages/base/style/shared/toggle.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 0.375rem;
-  font-size: 0.875rem;
+  font-size: var(--jp-ui-font-size1);
   font-weight: 500;
   padding: 0.5rem 1rem;
   transition:
@@ -16,14 +16,18 @@
 }
 
 .Toggle:hover {
-  background-color: var(--jp-ui-font-color0) / 0.1;
+  background-color: color-mix(
+    in srgb,
+    var(--jp-ui-font-color0),
+    transparent 90%
+  );
   color: var(--jp-ui-inverse-font-color0);
 }
 
 .Toggle:focus-visible {
   box-shadow:
-    0 0 0 2px var(--jp-border-color0),
-    0 0 0 4px var(--jp-border-color0);
+    0 0 0 2px var(--jp-accent-color0),
+    0 0 0 4px var(--jp-accent-color0);
 }
 
 .Toggle:disabled {
@@ -42,7 +46,7 @@
 }
 
 .ToggleOutline {
-  border: 1px solid var(--jp-border-color0);
+  border: 1px solid var(--jp-accent-color0);
   background-color: transparent;
   transition:
     background-color 0.3s,
@@ -52,7 +56,7 @@
 
 .ToggleOutline:hover {
   background-color: var(--jp-accent-color0);
-  color: var(--jp-ui-font-color0);
+  color: var(--jp-ui-inverse-font-color0);
 }
 
 .ToggleDefaultSize {
@@ -76,6 +80,6 @@
 .ToggleGroupContext {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   gap: 0.25rem;
 }
