Create shared components (#749)
* Create some shared components

* Add tabs; Add CSS

* Button CSS

* Use newer button

* Add components for date picker

* Add pagination component

* Iterate on paginator

* Tiny tweaks

* Use the correct package.json

* lint

* Woops

* Use jupyter css vars

* Add sr-only class

* Lint

* Clean up

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -11,6 +11,10 @@
 @import url('./statusBar.css');
 @import url('./temporalSlider.css');
 @import url('ol/ol.css');
+@import url('./shared/button.css');
+@import url('./shared/toggle.css');
+@import url('./shared/tabs.css');
+@import url('./shared/pagination.css');
 
 .jGIS-Toolbar-GroupName {
   font-size: var(--jp-ui-font-size0);
@@ -58,4 +62,16 @@ button.jp-mod-styled.jp-mod-accept {
 
 button.jp-mod-styled.jp-mod-reject {
   background-color: var(--jp-layout-color4) !important;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
