--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -10,6 +10,7 @@
 @import url('./symbologyDialog.css');
 @import url('./statusBar.css');
 @import url('./temporalSlider.css');
+@import url('./stacBrowser.css');
 @import url('ol/ol.css');
 @import url('./shared/button.css');
 @import url('./shared/toggle.css');
