--- a/packages/base/style/stacBrowser.css
+++ b/packages/base/style/stacBrowser.css
@@ -31,6 +31,8 @@
 .jgis-stac-browser-date-picker {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
 
 .jgis-stac-browser-filters-panel {
