--- a/packages/base/style/shared/dropdownMenu.css
+++ b/packages/base/style/shared/dropdownMenu.css
@@ -116,12 +116,13 @@
     user-select: none;
     align-items: center;
     border-radius: 0.25rem;
-    padding-left: 1rem;
+    padding-left: 1.75rem;
     padding-right: 0.5rem;
     padding-top: 0.375rem;
     padding-bottom: 0.375rem;
     font-size: 0.875rem;
     outline: none;
+    gap: 1rem;
     transition: background-color 0.3s, color 0.3s;
 }
 
