--- a/packages/base/style/stacBrowser.css
+++ b/packages/base/style/stacBrowser.css
@@ -40,5 +40,30 @@
 .jgis-stac-browser-filters-panel {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
+  align-items: flex-start;
+  padding: 0 0.5rem;
+}
+
+.jgis-stac-filter-trigger {
+  max-width: fit-content;
+  border: 1px solid var(--jp-border-color0);
+  padding: 0.5rem;
+  cursor: pointer;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 0.15rem;
+}
+
+.jgis-stac-filter-section-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.jgis-stac-filter-section-badges {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.25rem;
 }
