--- a/packages/base/style/shared/dropdownMenu.css
+++ b/packages/base/style/shared/dropdownMenu.css
@@ -188,7 +188,7 @@
     padding-right: 0.5rem;
     padding-top: 0.375rem;
     padding-bottom: 0.375rem;
-    margin: 0.5rem 0;
+    margin-bottom: 0.5rem;
     font-size: 0.875rem;
     font-weight: 600;
     text-decoration: underline;
