--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -19,6 +19,7 @@
 @import url('./shared/calendar.css');
 @import url('./shared/dropdownMenu.css');
 @import url('./shared/badge.css');
+@import url('./shared/checkbox.css');
 
 .errors {
   color: var(--jp-warn-color0);
