--- a/packages/base/style/shared/checkbox.css
+++ b/packages/base/style/shared/checkbox.css
@@ -1,4 +1,4 @@
-.Checkbox {
+.jgis-checkbox {
   height: 1rem;
   width: 1rem;
   flex-shrink: 0;
@@ -10,17 +10,17 @@
   padding: 0;
 }
 
-.Checkbox:disabled {
+.jgis-checkbox:disabled {
   cursor: not-allowed;
   opacity: 0.5;
 }
 
-.Checkbox[data-state='checked'] {
+.jgis-checkbox[data-state='checked'] {
   background-color: var(--jp-ui-font-color0);
   color: var(--jp-layout-color0);
 }
 
-.CheckboxIndicator {
+.jgis-checkbox-indicator {
   display: flex;
   align-items: center;
   justify-content: center;
