--- a/packages/base/style/shared/dropdownMenu.css
+++ b/packages/base/style/shared/dropdownMenu.css
@@ -20,7 +20,7 @@
   }
 }
 
-.DropdownMenuSubTrigger {
+.jgis-dropdown-menu-sub-trigger {
   display: flex;
   cursor: default;
   user-select: none;
@@ -34,7 +34,7 @@
   outline: none;
 }
 
-.DropdownMenuSubTrigger:focus {
+.jgis-dropdown-menu-sub-trigger:focus {
   background-color: color-mix(
     in srgb,
     var(--jp-ui-font-color0),
@@ -42,7 +42,7 @@
   );
 }
 
-.DropdownMenuSubTrigger[data-state='open'] {
+.jgis-dropdown-menu-sub-trigger[data-state='open'] {
   background-color: color-mix(
     in srgb,
     var(--jp-ui-font-color0),
@@ -50,7 +50,7 @@
   );
 }
 
-.DropdownMenuSubContent {
+.jgis-dropdown-menu-sub-content {
   display: flex;
   flex-direction: column;
   cursor: default;
@@ -64,7 +64,7 @@
   border: 1px solid var(--jp-border-color0);
 }
 
-.DropdownMenuSubContent:focus {
+.jgis-dropdown-menu-sub-content:focus {
   background-color: color-mix(
     in srgb,
     var(--jp-layout-color0),
@@ -72,11 +72,11 @@
   );
 }
 
-.DropdownMenuSubContent[data-state='open'] {
+.jgis-dropdown-menu-sub-content[data-state='open'] {
   background-color: var(--jp-layout-color2);
 }
 
-.DropdownMenuContent {
+.jgis-dropdown-menu-content {
   z-index: 50;
   min-width: 8rem;
   overflow: hidden;
@@ -89,15 +89,15 @@
     color-mix(in srgb, var(--jp-layout-color0), transparent 50%);
 }
 
-.DropdownMenuContent[data-state='open'] {
+.jgis-dropdown-menu-content[data-state='open'] {
   animation: animate-in 0.3s ease-in;
 }
 
-.DropdownMenuContent[data-state='closed'] {
+.jgis-dropdown-menu-content[data-state='closed'] {
   animation: animate-out 0.3s ease-out;
 }
 
-.DropdownMenuItem {
+.jgis-dropdown-menu-item {
   position: relative;
   display: flex;
   cursor: default;
@@ -113,7 +113,7 @@
   transition-duration: 0.3s;
 }
 
-.DropdownMenuItem:focus {
+.jgis-dropdown-menu-item:focus {
   background-color: color-mix(
     in srgb,
     var(--jp-ui-font-color0),
@@ -121,12 +121,12 @@
   );
 }
 
-.DropdownMenuItem[data-disabled='true'] {
+.jgis-dropdown-menu-item[data-disabled='true'] {
   pointer-events: none;
   opacity: 0.5;
 }
 
-.DropdownMenuCheckboxItem {
+.jgis-dropdown-menu-checkbox-item {
   position: relative;
   display: flex;
   cursor: default;
@@ -145,17 +145,17 @@
     color 0.3s;
 }
 
-.DropdownMenuCheckboxItem:focus {
+.jgis-dropdown-menu-checkbox-item:focus {
   background-color: var(--jp-layout-color2);
   color: var(--jp-accent-color0);
 }
 
-.DropdownMenuCheckboxItem[data-disabled='true'] {
+.jgis-dropdown-menu-checkbox-item[data-disabled='true'] {
   pointer-events: none;
   opacity: 0.5;
 }
 
-.DropdownMenuCheckboxItemSpan {
+.jgis-dropdown-menu-checkbox-item-span {
   position: absolute;
   left: 0.5rem;
   display: flex;
@@ -165,7 +165,7 @@
   justify-content: center;
 }
 
-.DropdownMenuRadioItem {
+.jgis-dropdown-menu-radio-item {
   position: relative;
   display: flex;
   cursor: default;
@@ -183,17 +183,17 @@
     color 0.3s;
 }
 
-.DropdownMenuRadioItem:focus {
+.jgis-dropdown-menu-radio-item:focus {
   background-color: var(--jp-layout-color2);
   color: var(--jp-accent-color0);
 }
 
-.DropdownMenuRadioItem[data-disabled='true'] {
+.jgis-dropdown-menu-radio-item[data-disabled='true'] {
   pointer-events: none;
   opacity: 0.5;
 }
 
-.DropdownMenuRadioItemSpan {
+.jgis-dropdown-menu-radio-item-span {
   position: absolute;
   left: 0.5rem;
   display: flex;
@@ -203,7 +203,7 @@
   justify-content: center;
 }
 
-.DropdownMenuLabel {
+.jgis-dropdown-menu-label {
   color: var(--jp-ui-font-color0);
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -216,7 +216,7 @@
   text-underline-offset: 0.5rem;
 }
 
-.DropdownMenuSeparator {
+.jgis-dropdown-menu-separator {
   width: 100%;
   height: 1px;
   background-color: color-mix(
@@ -226,14 +226,14 @@
   );
 }
 
-.DropdownMenuShortcut {
+.jgis-dropdown-menu-shortcut {
   margin-left: auto;
   font-size: 0.75rem;
   letter-spacing: 0.15em;
   opacity: 0.6;
 }
 
-.DropdownMenuIcon {
+.jgis-dropdown-menu-icon {
   margin-left: auto;
   height: 1rem;
   width: 1rem;
