--- a/packages/base/style/shared/pagination.css
+++ b/packages/base/style/shared/pagination.css
@@ -1,4 +1,4 @@
-.Pagination {
+.jgis-pagination {
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -6,7 +6,7 @@
   justify-content: center;
 }
 
-.PaginationContent {
+.jgis-pagination-content {
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -18,7 +18,7 @@
   align-items: center;
 }
 
-.PaginationLink {
+.jgis-pagination-link {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -38,7 +38,7 @@
   padding: 0.25rem;
 }
 
-.PaginationLink:hover {
+.jgis-pagination-link:hover {
   background-color: color-mix(
     in srgb,
     var(--jp-layout-color0),
@@ -46,33 +46,33 @@
   );
 }
 
-.PaginationLink:focus-visible {
+.jgis-pagination-link:focus-visible {
   outline: none;
   box-shadow: 0 0 0 3px
     color-mix(in srgb, var(--jp-layout-color2), transparent 50%);
 }
 
-.PaginationLink:disabled {
+.jgis-pagination-link:disabled {
   pointer-events: none;
   opacity: 0.5;
 }
 
-.PaginationLink:disabled:focus-visible {
+.jgis-pagination-link:disabled:focus-visible {
   outline: none;
   box-shadow: none;
 }
 
-.PaginationLink[data-variant='destructive'] {
+.jgis-pagination-link[data-variant='destructive'] {
   background-color: var(--jp-error-color0);
   color: var(--jp-ui-font-color0);
   transition: background-color 0.2s ease;
 }
 
-.PaginationLink[data-variant='destructive']:hover {
+.jgis-pagination-link[data-variant='destructive']:hover {
   background-color: color-mix(in srgb, var(--jp-error-color0), transparent 90%);
 }
 
-.PaginationLink[data-variant='outline'] {
+.jgis-pagination-link[data-variant='outline'] {
   border: 1px solid var(--jp-accent-color0);
   background-color: var(--jp-layout-color2);
   transition:
@@ -80,19 +80,19 @@
     color 0.2s ease;
 }
 
-.PaginationLink[data-variant='ghost']:hover,
-.PaginationLink[data-variant='outline']:hover {
+.jgis-pagination-link[data-variant='ghost']:hover,
+.jgis-pagination-link[data-variant='outline']:hover {
   background-color: var(--jp-accent-color0);
   color: var(--jp-ui-inverse-font-color0);
 }
 
-.PaginationLink[data-variant='secondary'] {
+.jgis-pagination-link[data-variant='secondary'] {
   background-color: var(--jp-layout-color2);
   color: var(--jp-ui-font-color2);
   transition: background-color 0.2s ease;
 }
 
-.PaginationLink[data-variant='secondary']:hover {
+.jgis-pagination-link[data-variant='secondary']:hover {
   background-color: color-mix(
     in srgb,
     var(--jp-layout-color0),
@@ -100,12 +100,12 @@
   );
 }
 
-.PaginationLink[data-variant='ghost'] {
+.jgis-pagination-link[data-variant='ghost'] {
   background-color: var(--jp-layout-color0);
   color: var(--jp-ui-font-color0);
 }
 
-.PaginationLink[data-variant='link'] {
+.jgis-pagination-link[data-variant='link'] {
   color: var(--jp-ui-font-color0);
   text-decoration: underline;
   text-underline-offset: 0.25rem;
@@ -114,31 +114,31 @@
   padding: 0;
 }
 
-.PaginationLink[data-variant='link']:hover {
+.jgis-pagination-link[data-variant='link']:hover {
   color: color-mix(in srgb, var(--jp-ui-font-color0), transparent 80%);
   text-decoration-color: var(--jp-ui-font-color0);
 }
 
-.PaginationLink[data-size='sm'] {
+.jgis-pagination-link[data-size='sm'] {
   height: 2.25rem;
   border-radius: 0.375rem;
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
 
-.PaginationLink[data-size='lg'] {
+.jgis-pagination-link[data-size='lg'] {
   height: 2.75rem;
   border-radius: 0.375rem;
   padding-left: 2rem;
   padding-right: 2rem;
 }
 
-.PaginationLink[data-size='icon'] {
+.jgis-pagination-link[data-size='icon'] {
   height: 1.5rem;
   width: 1.5rem;
 }
 
-.PaginationPrevious {
+.jgis-pagination-previous {
   gap: 0.25rem;
   padding-left: 0.625rem;
   display: flex;
@@ -148,7 +148,7 @@
   background-color: var(--jp-layout-color1);
 }
 
-.PaginationNext {
+.jgis-pagination-next {
   gap: 0.25rem;
   padding-right: 0.625rem;
   display: flex;
@@ -158,7 +158,7 @@
   background-color: var(--jp-layout-color1);
 }
 
-.PaginationEllipsis {
+.jgis-pagination-ellipsis {
   display: flex;
   height: 2.25rem;
   width: 2.25rem;
