--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -10,11 +10,16 @@
 @import url('./symbologyDialog.css');
 @import url('./statusBar.css');
 @import url('./temporalSlider.css');
+@import url('./stacBrowser.css');
 @import url('ol/ol.css');
 @import url('./shared/button.css');
 @import url('./shared/toggle.css');
 @import url('./shared/tabs.css');
 @import url('./shared/pagination.css');
+@import url('./shared/calendar.css');
+@import url('./shared/dropdownMenu.css');
+@import url('./shared/badge.css');
+@import url('./shared/checkbox.css');
 
 .errors {
   color: var(--jp-warn-color0);
