--- a/packages/base/style/stacBrowser.css
+++ b/packages/base/style/stacBrowser.css
@@ -56,6 +56,10 @@
   gap: 0.15rem;
 }
 
+.jgis-stac-filter-trigger:disabled {
+  cursor: not-allowed;
+}
+
 .jgis-stac-filter-section-container {
   display: flex;
   flex-direction: column;
