Remove the position absolute CSS rule of the anonymousIcon in the toolbar

--- a/python/jupytergis_core/style/base.css
+++ b/python/jupytergis_core/style/base.css
@@ -3,3 +3,7 @@
 
     https://jupyterlab.readthedocs.io/en/stable/developer/css.html
 */
+
+jp-toolbar.jpcad-toolbar-widget .jp-MenuBar-anonymousIcon {
+  position: unset !important;
+}
