Embed side panels in map view (#784)
* Embedded panels

* Add shadow

* Update packages/base/src/panelview/components/layers.tsx

Co-authored-by: martinRenou <martin.renou@gmail.com>

* Made suggested changes

* Solve a bug with identify panel

* Make suggested changes

* Made suggested changes

* Lint

* Solve a bug and made suggested changes

* Made suggested changes

* Add panels to notebook view

* Made suggested changes

* Solve annotations tests

* Update Playwright Snapshots

* Update Playwright Snapshots

* Solved integration tests

* Update Playwright Snapshots

---------

Co-authored-by: martinRenou <martin.renou@gmail.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/packages/base/style/temporalSlider.css
+++ b/packages/base/style/temporalSlider.css
@@ -5,6 +5,7 @@
   padding: 0.5rem;
   background-color: var(--jp-layout-color1);
   border-bottom: 1px solid var(--jp-border-color1);
+  z-index: 99;
 }
 
 .jp-gis-temporal-slider-container span,
