--- a/packages/base/style/shared/tabs.css
+++ b/packages/base/style/shared/tabs.css
@@ -1,14 +1,26 @@
+.jgis-panel-tabs {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--jp-layout-color0);
+  box-shadow:
+    0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 5px;
+}
 .jgis-tabs-list {
   display: inline-flex;
   height: 2.5rem;
   align-items: center;
   justify-content: space-evenly;
-  border-radius: 0.375rem;
   background-color: var(--jp-layout-color2);
-  padding: 0.25rem;
   color: var(--jp-ui-font-color0);
   gap: 1rem;
   width: 100%;
+  font-size: 9px;
+  border-radius: 5px;
 }
 
 .jgis-tabs-trigger {
@@ -47,6 +59,8 @@
 .jgis-tabs-content {
   outline: none;
   width: 100%;
+  overflow-y: scroll;
+  max-height: 480px;
 }
 
 .jgis-tabs-content:focus-visible {
