--- a/packages/base/style/tabPanel.css
+++ b/packages/base/style/tabPanel.css
@@ -1,3 +1,9 @@
+.jgis-panel-tab-content {
+  border-radius: 5px;
+  font-size: 10px;
+  padding-bottom: 50px;
+}
+
 .jgis-stac-browser-collection {
   flex-wrap: wrap;
   margin-top: 0.5rem;
