wrap panels to a container and give it style

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -103,19 +103,21 @@ button.jp-mod-styled.jp-mod-reject {
 }
 
 @media (max-width: 768px) {
+  .jgis-panels-wrapper {
+    position: fixed;
+    top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    margin: 0 5px;
+    z-index: 1000;
+    width: 60%;
+  }
+
   .jgis-left-panel-container,
   .jgis-right-panel-container {
-    position: fixed;
-    left: 0;
-    right: auto;
-    width: 90%;
-  }
-
-  .jgis-left-panel-container {
-    top: 30px;
-  }
-
-  .jgis-right-panel-container {
-    top: calc(30px + 250px + 20px);
+    position: relative;
+    margin: 0;
   }
 }
