Enable color ramp labels to display over light color ramps
Co-authored-by: Nakul Verma <nakulverma.py@gmail.com>

--- a/packages/base/style/symbologyDialog.css
+++ b/packages/base/style/symbologyDialog.css
@@ -183,6 +183,7 @@ select option {
   color: white;
   position: absolute;
   transition: transform 0.3s ease;
+  text-shadow: 0px 0px 4px black;
 }
 
 .jp-gis-color-ramp-entry:hover .jp-gis-color-label {
