--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -92,7 +92,7 @@ button.jp-mod-styled.jp-mod-reject {
   right: 0px;
   position: absolute;
   margin: 5px;
-  z-index: 40
+  z-index: 40;
 }
 
 .jgis-left-panel-container {
@@ -101,7 +101,7 @@ button.jp-mod-styled.jp-mod-reject {
   top: 30px;
   left: 0px;
   margin: 5px;
-  z-index: 40
+  z-index: 40;
 }
 
 @media (max-width: 768px) {
